--- a/index.html
+++ b/index.html
@@ -1,43 +1,20 @@
-﻿<!doctype html>
-<html lang="ko">
-	<head>
-		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1">
-		<title>html5문서</title>
-		<link rel="stylesheet" href="css/reset.css">
-		<!-- <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"> -->
-		<!-- <link rel="stylesheet" href="http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css"> -->
-		 <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>React Page_Travel</title>
+  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/all.min.css">
+  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script> 
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> 
+  <script src="./js/babel.min.js"></script>
+</head>
+<body>
+  
+  <div id="root"></div>
 
-		<link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-
-
-
-
-
-		<link rel="stylesheet" href="css/v_full.css">
-		<script src="js/jquery-1.12.3.js"></script>
-		<!-- <script src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script> -->
-         <!-- <script src="js/slick.min.js"></script>   -->
-		 <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
-		
-	<!-- <script crossorigin src="https://unpkg.com/react@18/umd/react.production.min.js"></script> 
-	<script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> -->
-	<script src="https://unpkg.com/react@18/umd/react.production.min.js"></script> 
-	<script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script> 
-	<script src="./js/babel.min.js"></script>
-
-	</head>
-	
-	<body>
-	
-		  <div id="root"></div>
-
-   <script type="text/babel" src="./js/main_react.js"></script>
-   <script type="text/babel" src="./js/main.js"></script>
-	</body>
-
-	
+  <script type="text/babel" src="js/main_travel.js"></script>
+</body>
 </html>
-
-
